# spotnix

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  default.nix  devshell.nix  devshell.toml  flake.nix  shell.nix
.github/workflows/: ci.yaml
dream2nix-packages/spotnix/: dream-lock.json
examples/: README.md  progress.sh  search-and-play-album.sh  search-and-play-artist.sh  search-and-play-playlist.sh  search-and-play-track.sh  select-device.sh
src/: errors.rs  event.rs  input.rs  main.rs  output.rs  playback_status.rs
