[package]
name = "spotnix"
version = "0.1.1"
authors = ["John Axel Eriksson <john@insane.se>"]
edition = "2018"
description = "Spotify for Unix"
repository = "https://github.com/johnae/spotnix"
readme = "README.md"
license = "MIT"

[dependencies]
rspotify = "0.7"
nix = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "0.15"
structopt = "0.3"
log = "0.4"
env_logger = "0.7"
failure = "0.1" # just so we can wrap in our own enum
timer = "0.2"
chrono = "0.4"